# shutter-galxe-credential-server

./: .dockerignore  .envrc.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yml  docker-entrypoint.sh  example.env  migration.sql  pyproject.toml
docker/: Dockerfile
shutter_galxe_credential_server/: __init__.py  credentials.py  db.py  main.py  server.py  sync.py
shutter_galxe_credential_server/abis/: Inbox.json  Sequencer.json  __init__.py
