[tool.poetry]
name = "shutter-galxe-credential-server"
version = "0.1.0"
description = ""
authors = ["Jannik Luhn <jannik@brainbot.com>", "Punit Jain <punit@brainbot.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-cors = "^4.0.0"
gunicorn = "^21.2.0"
web3 = "^6.15.1"
eth_utils = "^4.0.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ipython = "^8.22.2"

[tool.poetry.scripts]
shutter-galxe-credential-server = "shutter_galxe_credential_server.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
